--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0",
+        "php": "^8.1|^8.2|^8.3",
         "ext-trader": "*",
-        "illuminate/support": "^5.5|^6.0|^7.0|^8.0"
+        "illuminate/support": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0|^12.0"
     },
     "require-dev": {
         "orchestra/testbench": "3.5.*|4.*|5.*|6.*",
